1.6.10 - 2018-XX-XX


1.6.9 - 2018-09-04

  1. Change default values for GCS batch/directory operations properties to
     improve performance:

       fs.gs.copy.max.requests.per.batch (default: 1 -> 15)
       fs.gs.copy.batch.threads (default: 50 -> 15)
       fs.gs.max.requests.per.batch (default: 25 -> 15)
       fs.gs.batch.threads (default: 25 -> 15)

  2. Update all dependencies to latest versions.


1.6.8 - 2018-08-10

  1. Support parallel execution of GCS batch requests.

     Number of threads to execute batch requests configurable via property:

       fs.gs.batch.threads (default: 0)

     If `fs.gs.batch.threads` value is set to 0 then batch requests will be
     executed sequentially by caller thread.

  2. Do not send batch request when performing operations (rename, delete, copy)
     on 1 object.

  3. Add configuration properties to control batching of copy operations
     separately from other operations:

       fs.gs.copy.max.requests.per.batch (default: 30)
       fs.gs.copy.batch.threads (default: 0)

  4. Fix `RejectedExecutionException` during parallel execution of GCS batch
     requests.

  5. Change default values for GCS batch/directory operations properties:

       fs.gs.copy.with.rewrite.enable (default: false -> true)
       fs.gs.copy.max.requests.per.batch (default: 30 -> 1)
       fs.gs.copy.batch.threads (default: 0 -> 50)
       fs.gs.max.requests.per.batch (default: 30 -> 25)
       fs.gs.batch.threads (default: 0 -> 25)


1.6.7 - 2018-06-12

  1. Remove Hadoop3 support.

  2. Add interface through which user can directly provide the access token.

  3. Update Hadoop dependencies to 2.8.4 version.

  4. Add more retries and error handling in GoogleCloudStorageReadChannel,
     to make it more resilient to network errors; also add a property to allow users
     to specify number of retries on low level GCS HTTP requests in case of server
     errors and I/O errors.
