@@ -963,6 +963,9 @@ public class GoogleCloudStorageImpl
         configureRequest(
             gcs.objects().rewrite(srcBucketName, srcObjectName, dstBucketName, dstObjectName, null),
             srcBucketName);
+    if (storageOptions.getMaxBytesRewrittenPerCall() > 0) {
+      rewriteObject.setMaxBytesRewrittenPerCall(storageOptions.getMaxBytesRewrittenPerCall());
+    }
 
     // TODO(b/79750454) do not batch rewrite requests because they time out in batches.
     batchHelper.queue(
@@ -986,6 +989,10 @@ public class GoogleCloudStorageImpl
                             .rewrite(
                                 srcBucketName, srcObjectName, dstBucketName, dstObjectName, null),
                         srcBucketName);
+                if (storageOptions.getMaxBytesRewrittenPerCall() > 0) {
+                  rewriteObjectWithToken.setMaxBytesRewrittenPerCall(
+                      storageOptions.getMaxBytesRewrittenPerCall());
+                }
                 rewriteObjectWithToken.setRewriteToken(rewriteResponse.getRewriteToken());
                 batchHelper.queue(rewriteObjectWithToken, this);
               } catch (IOException e) {
